# masakari

./: .gitignore  README.md
docs/: evacuation_patterns.md
masakari-controller/: MANIFEST.in  README  README-wip  README.md  requirements.txt  setup.cfg  test-requirements.txt
masakari-controller/controller/: masakari_config.py  masakari_controller.py  masakari_starter.py  masakari_util.py  masakari_worker.py
masakari-controller/controller/tests/: fakes.py  test_masakari_worker.py
masakari-controller/db/: api.py  create_database.sh  create_tables.py  models.py  test.py
masakari-controller/db/db/: create_tables.py  create_vmha_database.sql
masakari-controller/debian/: changelog  control  install  postinst  postrm  rules
masakari-controller/etc/: masakari-controller.conf.sample
masakari-controller/etc/systemd/system/: masakari-controller.service
masakari-controller/init.d/: masakari-controller
masakari-controller/masakari-controller/: masakari_config.py  masakari_controller.py  masakari_starter.py  masakari_util.py  masakari_worker.py
masakari-controller/masakari-controller/tests/: masakari-controller-test.conf
masakari-controller/rpmbuild/: howtobuild_rpms.txt
masakari-controller/rpmbuild/SPECS/: masakari-controller.spec
masakari-controller/utils/: notification_status_manage.py  reserve_host_manage.py  vmha_data_manage.py
masakari-hostmonitor/debian/: changelog  control  dirs  install  postinst  postrm
masakari-hostmonitor/etc/: masakari-hostmonitor.conf.sample
masakari-instancemonitor/: MANIFEST.in  requirements.txt  setup.cfg  setup.py
(+67 files in other folders)
