[metadata]
name = masakari-controller
version = 1.0.0
author = NTT Software Innovation Center
author-email = openstack@lab.ntt.co.jp
description-file = README
license = Apache-2
home-page = https://github.com/ntt-sic/masakari
keywords=
	vmha
	masakari
classifiers=
	Development Status :: 2 - Pre-Alpha
	Topic :: Utilities
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python

[files]
packages=
	controller
data_files =
	   etc/masakari = etc/*

[entry_points]
console_scripts =
		masakari-controller = controller.masakari_controller:main
